Adding basic RNDIS Support

--- a/rndis/src/main/res/layout/activity_rndis.xml
+++ b/rndis/src/main/res/layout/activity_rndis.xml
@@ -1,16 +1,42 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                tools:context=".RNDIS">
-
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:orientation="vertical"
+              android:layout_width="fill_parent"
+              android:layout_height="fill_parent"
+        >
     <TextView
-            android:text="@string/hello_world"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/usageTest"
+            android:id="@+id/usage"/>
+    <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="IP Address"
+            android:id="@+id/textIPAddress"/>
+    <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:digits="0123456789."
+            android:id="@+id/editIPAddress" android:hint="10.0.0.1"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="IP Mask"
+            android:id="@+id/textIPMask"/>
+    <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:digits="0123456789."
+            android:id="@+id/editIPMask" android:hint="255.0.0.0"/>
+    <Switch
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="RNDIS Mode"
+            android:id="@+id/rndis_switch" android:layout_gravity="center_horizontal" android:checked="false"/>
+</LinearLayout>
 
-</RelativeLayout>
