--- a/rndis/src/main/res/layout/activity_rndis.xml
+++ b/rndis/src/main/res/layout/activity_rndis.xml
@@ -3,6 +3,10 @@
               android:orientation="vertical"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
+              android:paddingLeft="@dimen/activity_horizontal_margin"
+              android:paddingRight="@dimen/activity_horizontal_margin"
+              android:paddingTop="@dimen/activity_vertical_margin"
+              android:paddingBottom="@dimen/activity_vertical_margin"
         >
     <TextView
             android:layout_width="fill_parent"
@@ -38,6 +42,7 @@
     <Switch
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="RNDIS Mode"
             android:id="@+id/rndis_switch"
             android:layout_gravity="center_horizontal"
