--- a/rndis/src/main/res/menu/menu_rndi.xml
+++ b/rndis/src/main/res/menu/menu_rndi.xml
@@ -3,7 +3,7 @@
       xmlns:tools="http://schemas.android.com/tools"
       tools:context=".RNDIS">
     <item android:id="@+id/action_settings"
-          android:title="@string/action_settings"
+          android:title="@string/action_help"
           android:orderInCategory="100"
           app:showAsAction="never"/>
 </menu>
