--- a/rndis/src/main/res/layout/activity_rndis.xml
+++ b/rndis/src/main/res/layout/activity_rndis.xml
@@ -46,6 +46,11 @@
             android:digits="0123456789."
             android:id="@+id/editIPMask"
             android:hint="@string/mask_hint"/>
+    <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Probe DHCP"
+            android:id="@+id/buttonDhcp"/>
     <Switch
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -54,10 +59,5 @@
             android:id="@+id/rndis_switch"
             android:layout_gravity="center_horizontal"
             android:checked="false"/>
-    <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Probe DHCP"
-            android:id="@+id/buttonDhcp" android:layout_gravity="center_horizontal"/>
 </LinearLayout>
 
